tests/game_logic/snapshots/game_field__after_reset_and_played_field.snap
---
created: "2019-09-30T08:33:20.091939280Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: g.to_field_string()
---

3444212440
1222420340
0440340022
3420422120
1220124400
3444344340
2200002422
1200122120
0440004440
3400344340
0220002220
1200122120
4000440044
3400340340
4000122200
2000044000
1200340000
2000200000
3444120000
1222200000

