tests/game_logic/snapshots/game_field__after_reset_and_played_field_reshapeable.snap
---
created: "2019-09-18T11:15:47.112970970Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: g.to_reshapeable_array()
---
[
    3,
    4,
    4,
    4,
    2,
    1,
    2,
    4,
    4,
    0,
    1,
    2,
    2,
    2,
    4,
    2,
    0,
    3,
    4,
    0,
    0,
    4,
    4,
    0,
    3,
    4,
    0,
    0,
    2,
    2,
    3,
    4,
    2,
    0,
    4,
    2,
    2,
    1,
    2,
    0,
    1,
    2,
    2,
    0,
    1,
    2,
    4,
    4,
    0,
    0,
    3,
    4,
    4,
    4,
    3,
    4,
    4,
    3,
    4,
    0,
    2,
    2,
    0,
    0,
    0,
    0,
    2,
    4,
    2,
    2,
    1,
    2,
    0,
    0,
    1,
    2,
    2,
    1,
    2,
    0,
    0,
    4,
    4,
    0,
    0,
    0,
    4,
    4,
    4,
    0,
    3,
    4,
    0,
    0,
    3,
    4,
    4,
    3,
    4,
    0,
    0,
    2,
    2,
    0,
    0,
    0,
    2,
    2,
    2,
    0,
    1,
    2,
    0,
    0,
    1,
    2,
    2,
    1,
    2,
    0,
    4,
    0,
    0,
    0,
    4,
    4,
    0,
    0,
    4,
    4,
    3,
    4,
    0,
    0,
    3,
    4,
    0,
    3,
    4,
    0,
    4,
    0,
    0,
    0,
    1,
    2,
    2,
    2,
    0,
    0,
    2,
    0,
    0,
    0,
    0,
    4,
    4,
    0,
    0,
    0,
    1,
    2,
    0,
    0,
    3,
    4,
    0,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    0,
    0,
    3,
    4,
    4,
    4,
    1,
    2,
    0,
    0,
    0,
    0,
    1,
    2,
    2,
    2,
    2,
    0,
    0,
    0,
    0,
    0,
    -37,
    -38,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    2,
    3,
    2,
    1,
    2,
    2,
    2,
    2,
    1,
    3,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
]
