tests/game_logic/snapshots/game_field__after_reset_and_played_field_reshapeable_as_second.snap
---
source: tests/game_logic/game_field.rs
expression: g.to_reshapeable_array(true)
---
[
    1,
    2,
    2,
    2,
    4,
    3,
    4,
    2,
    2,
    0,
    3,
    4,
    4,
    4,
    2,
    4,
    0,
    1,
    2,
    0,
    0,
    2,
    2,
    0,
    1,
    2,
    0,
    0,
    4,
    4,
    1,
    2,
    4,
    0,
    2,
    4,
    4,
    3,
    4,
    0,
    3,
    4,
    4,
    0,
    3,
    4,
    2,
    2,
    0,
    0,
    1,
    2,
    2,
    2,
    1,
    2,
    2,
    1,
    2,
    0,
    4,
    4,
    0,
    0,
    0,
    0,
    4,
    2,
    4,
    4,
    3,
    4,
    0,
    0,
    3,
    4,
    4,
    3,
    4,
    0,
    0,
    2,
    2,
    0,
    0,
    0,
    2,
    2,
    2,
    0,
    1,
    2,
    0,
    0,
    1,
    2,
    2,
    1,
    2,
    0,
    0,
    4,
    4,
    0,
    0,
    0,
    4,
    4,
    4,
    0,
    3,
    4,
    0,
    0,
    3,
    4,
    4,
    3,
    4,
    0,
    2,
    0,
    0,
    0,
    2,
    2,
    0,
    0,
    2,
    2,
    1,
    2,
    0,
    0,
    1,
    2,
    0,
    1,
    2,
    0,
    2,
    0,
    0,
    0,
    3,
    4,
    4,
    4,
    0,
    0,
    4,
    0,
    0,
    0,
    0,
    2,
    2,
    0,
    0,
    0,
    3,
    4,
    0,
    0,
    1,
    2,
    0,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    1,
    2,
    2,
    2,
    3,
    4,
    0,
    0,
    0,
    0,
    3,
    4,
    4,
    4,
    4,
    0,
    0,
    0,
    0,
    0,
    -38,
    -37,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    2,
    2,
    2,
    1,
    3,
    2,
    3,
    2,
    1,
    2,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
]
