tests/game_logic/snapshots/game_field__after_reset_and_played_scores.snap
---
created: "2019-09-18T11:15:47.294593434Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: g.scores
---
[
    -37,
    -38,
]
