tests/game_logic/snapshots/game_field__after_reset_field.snap
---
created: "2019-09-18T11:15:46.994881361Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: g.to_field_string()
---

0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000

