tests/game_logic/snapshots/game_field__field_after_first_play.snap
---
created: "2019-09-30T08:33:19.949636851Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: g.to_field_string()
---

0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
4400000000
3400000000

