tests/game_logic/snapshots/game_field__field_after_four_plays.snap
---
created: "2019-09-30T08:33:20.000758019Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: g.to_field_string()
---

0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
2200000000
1200000000
3444000000
0220000000
1200000000
4400000000
3400000000

