tests/game_logic/snapshots/game_field__field_after_game_over.snap
---
created: "2019-09-30T08:33:20.050370841Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: g.to_field_string_with_player(false)
---

0020440220
1223401200
3444000440
2000003400
1200000220
2000001200
3444004400
2000003400
1200002000
2000001200
4000002440
3400003420
4000001220
2200000440
1200003400
3444000220
0220001200
1200004400
4400003400
3400001222

