tests/game_logic/snapshots/game_field__g.snap
---
created: "2019-09-18T11:15:46.374616747Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: "&g.lowest_ys"
---
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0
]
