tests/game_logic/snapshots/game_field__log_after_game_over.snap
---
created: "2019-09-18T11:15:46.838902751Z"
creator: insta@0.8.1
source: tests/game_logic/game_field.rs
expression: "serde_json::to_string(&g.log).unwrap()"
---
{"log":[{"PayloadPlaced":{"x":0,"y":0,"block":1,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":2,"block":3,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":0}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":4,"block":0,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":1}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":5,"block":1,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":2}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":8,"block":2,"orientation":1,"from":1}},{"PayloadRolled":{"from":0,"block":2}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":11,"block":2,"orientation":1,"from":0}},{"PayloadRolled":{"from":1,"block":0}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":13,"block":0,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":2}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":15,"block":2,"orientation":1,"from":0}},{"PayloadRolled":{"from":1,"block":0}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":17,"block":0,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":4}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":0,"y":18,"block":4,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":3,"y":18,"block":3,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":0}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":0,"block":0,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":1}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":1,"block":1,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":3,"block":3,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":5,"block":3,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":4}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":7,"block":4,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":8,"block":3,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":2}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":10,"block":2,"orientation":1,"from":0}},{"PayloadRolled":{"from":1,"block":1}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":12,"block":1,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":14,"block":3,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":16,"block":3,"orientation":0,"from":1}},{"PayloadRolled":{"from":0,"block":3}},{"PayloadConsidering":{"play_index":0}},{"PayloadPlaced":{"x":6,"y":18,"block":3,"orientation":0,"from":0}},{"PayloadRolled":{"from":1,"block":1}},{"PayloadSkipped":{"from":1,"block":1,"reason":1}},{"PayloadRolled":{"from":0,"block":3}},{"PayloadSkipped":{"from":0,"block":3,"reason":1}}]}
